--- a/config/config.yml
+++ b/config/config.yml
@@ -1,10 +1,12 @@
 site_configs: &site_configs
   # 导航栏 Logo 位置 HTML
   navbar_brand_html: |
-    <a href="/" class="navbar-brand"><b>Home</b>land</a>
+    <a href="/" class="navbar-brand"><b>Blc</b>talk</a>
   # 导航栏扩展菜单
   navbar_html: |
-    <li><a href="/topics/new">发现</a></li>
+    <li><a href="/topics/node61">资讯</a></li>
+    <li><a href="/topics/section9">区块链</a></li>
+    <li><a href="/topics/section10">区块链应用</a></li>
   index_html: |
     <div style="text-align:center;"></div>
   wiki_index_html: |
